+单独调整某种音频模式的界面（SKForm) ；#ToolsForm功能完成

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -175,6 +175,12 @@
     <Compile Include="MyForm\HardwareSetForm.Designer.cs">
       <DependentUpon>HardwareSetForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyForm\SKForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\SKForm.Designer.cs">
+      <DependentUpon>SKForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\SkinLightsEditForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -323,6 +329,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\HardwareSetForm.resx">
       <DependentUpon>HardwareSetForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\SKForm.resx">
+      <DependentUpon>SKForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\SkinLightsEditForm.resx">
       <DependentUpon>SkinLightsEditForm.cs</DependentUpon>
