预留日志工具类接口

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -303,6 +303,7 @@
     <Compile Include="Tools\ConnectTools.cs" />
     <Compile Include="Tools\Constant.cs" />
     <Compile Include="Tools\CRCTools.cs" />
+    <Compile Include="Tools\CSJLogs.cs" />
     <Compile Include="Tools\CSJ\ICommunicator.cs" />
     <Compile Include="Tools\CSJ\ICSJFile.cs" />
     <Compile Include="Tools\CSJ\IMPL\ChannelData.cs" />
