--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -177,6 +177,12 @@
     <Compile Include="MyForm\HardwareSetForm.Designer.cs">
       <DependentUpon>HardwareSetForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyForm\MultiStepForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\MultiStepForm.Designer.cs">
+      <DependentUpon>MultiStepForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\SKForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -338,6 +344,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\HardwareSetForm.resx">
       <DependentUpon>HardwareSetForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\MultiStepForm.resx">
+      <DependentUpon>MultiStepForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\SKForm.resx">
       <DependentUpon>SKForm.cs</DependentUpon>
