--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -733,7 +733,9 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Source\CSkin.XML" />
-    <Content Include="Source\IrisSkin4.dll" />
+    <Content Include="Source\IrisSkin4.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="x64\SQLite.Interop.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
