1.#摇麦Form去掉isNew变量，每次新建时都loadAll；2。主界面统一跳渐变不可无值！赋初值 ；3、#修改添加全选，及功能完善； 4.#声控链表改成1-9步，最大不超过20数量；

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -222,11 +222,11 @@
     <Compile Include="MyForm\MainFormInterface.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MyForm\MaterialForm.cs">
+    <Compile Include="MyForm\MaterialSaveForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MyForm\MaterialForm.Designer.cs">
-      <DependentUpon>MaterialForm.cs</DependentUpon>
+    <Compile Include="MyForm\MaterialSaveForm.Designer.cs">
+      <DependentUpon>MaterialSaveForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MyForm\MaterialUseForm.cs">
       <SubType>Form</SubType>
@@ -367,8 +367,8 @@
     <EmbeddedResource Include="MyForm\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MyForm\MaterialForm.resx">
-      <DependentUpon>MaterialForm.cs</DependentUpon>
+    <EmbeddedResource Include="MyForm\MaterialSaveForm.resx">
+      <DependentUpon>MaterialSaveForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\MaterialUseForm.resx">
       <DependentUpon>MaterialUseForm.cs</DependentUpon>
