1.+全通道添加真实时间 ；2、#窗口大小、autoScroll属性; 3.场景可调节; 4.listView加灯具地址。

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -711,6 +711,9 @@
     <Content Include="Source\IrisSkin4.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="FrameList.txt">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="x64\SQLite.Interop.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
