1.灯库+刷新com功能 ；2调整《素材使用Form》的尺寸

--- a/LightEditor/LightEditor.csproj
+++ b/LightEditor/LightEditor.csproj
@@ -225,6 +225,7 @@
     <Content Include="LightPic\魔球.bmp">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\刷新2.png" />
     <Content Include="Source\IrisSkin4.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
