--- a/LightEditor/GlobalSet.ini
+++ b/LightEditor/GlobalSet.ini
@@ -5,7 +5,7 @@ skin=
 lightEditor=0
 [Show]
 testButton=true
-hardwareUpdateButton=false
+hardwareUpdateButton=true
 [SavePath]
-useAppPath=true
+useAppPath=false
 otherPath=C:\Temp
