+动态添加场景（全局设置、摇麦设定）

--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -4,8 +4,8 @@ skin=
 [Link]
 lightEditor=0
 [Show]
-testButton=false
+testButton=true
 hardwareUpdateButton=true
 [SavePath]
-useAppPath=true
+useAppPath=false
 otherPath=C:\Temp
