--- a/LightController/GlobalSet.ini
+++ b/LightController/GlobalSet.ini
@@ -4,8 +4,8 @@ skin=
 [Link]
 lightEditor=0
 [Show]
-testButton=true
+testButton=false
 hardwareUpdateButton=true
 [SavePath]
-useAppPath=false
+useAppPath=true
 otherPath=C:\Temp
