--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -178,6 +178,12 @@
     <Compile Include="MyForm\HardwareSetForm.Designer.cs">
       <DependentUpon>HardwareSetForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyForm\MultiLightForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\MultiLightForm.Designer.cs">
+      <DependentUpon>MultiLightForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\MultiStepForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -334,6 +340,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\HardwareSetForm.resx">
       <DependentUpon>HardwareSetForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\MultiLightForm.resx">
+      <DependentUpon>MultiLightForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\MultiStepForm.resx">
       <DependentUpon>MultiStepForm.cs</DependentUpon>
