-复制灯全部删除 ；+复制多步功能 ； +调用其他场景（雏形）

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -138,6 +138,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ast\InsertMethod.cs" />
     <Compile Include="Ast\JustTest.cs" />
     <Compile Include="Ast\LightWrapper.cs" />
     <Compile Include="Ast\MaterialAst.cs" />
@@ -178,6 +179,12 @@
     <Compile Include="MyForm\HardwareSetForm.Designer.cs">
       <DependentUpon>HardwareSetForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyForm\MultiStepCopyForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\MultiStepCopyForm.Designer.cs">
+      <DependentUpon>MultiStepCopyForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\MultiLightForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -189,6 +196,12 @@
     </Compile>
     <Compile Include="MyForm\MultiStepForm.Designer.cs">
       <DependentUpon>MultiStepForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MyForm\MultiStepPasteForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\MultiStepPasteForm.Designer.cs">
+      <DependentUpon>MultiStepPasteForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MyForm\SKForm.cs">
       <SubType>Form</SubType>
@@ -294,6 +307,12 @@
     <Compile Include="MyForm\UpdateForm.Designer.cs">
       <DependentUpon>UpdateForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="MyForm\UseFrameForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MyForm\UseFrameForm.Designer.cs">
+      <DependentUpon>UseFrameForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyForm\YMSetForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -341,11 +360,17 @@
     <EmbeddedResource Include="MyForm\HardwareSetForm.resx">
       <DependentUpon>HardwareSetForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\MultiStepCopyForm.resx">
+      <DependentUpon>MultiStepCopyForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="MyForm\MultiLightForm.resx">
       <DependentUpon>MultiLightForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\MultiStepForm.resx">
       <DependentUpon>MultiStepForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\multiStepPasteForm.resx">
+      <DependentUpon>MultiStepPasteForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\SKForm.resx">
       <DependentUpon>SKForm.cs</DependentUpon>
@@ -394,6 +419,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\UpdateForm.resx">
       <DependentUpon>UpdateForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MyForm\UseFrameForm.resx">
+      <DependentUpon>UseFrameForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MyForm\YMSetForm.resx">
       <DependentUpon>YMSetForm.cs</DependentUpon>
