多线程并发处理数据生成

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -332,6 +332,10 @@
     <Compile Include="Tools\SerialPortTools.cs" />
     <Compile Include="Tools\SockTools.cs" />
     <Compile Include="Tools\Test.cs" />
+    <Compile Include="Utils\CSJThread.cs" />
+    <Compile Include="Utils\CSJThreadManager.cs" />
+    <Compile Include="Utils\DataConvertUtils.cs" />
+    <Compile Include="Utils\FileUtils.cs" />
     <EmbeddedResource Include="MyForm\GlobalSetForm.resx">
       <DependentUpon>GlobalSetForm.cs</DependentUpon>
     </EmbeddedResource>
