每次切换场景才进行加载数据之前的最后一个版本:+打开及保存工程都在MessageBox中显示时间。

--- a/LightController/LightController.csproj
+++ b/LightController/LightController.csproj
@@ -882,16 +882,12 @@
     <None Include="Resources\跳转.png" />
     <None Include="Resources\保持状态1.png" />
     <None Include="Resources\保持状态2.png" />
-    <Content Include="Source\CSkin.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Source\CSkin.XML" />
-    <Content Include="Source\IrisSkin4.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
     <Content Include="FrameList.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Source\CSkin.dll" />
+    <Content Include="Source\CSkin.XML" />
+    <Content Include="Source\IrisSkin4.dll" />
     <Content Include="x64\SQLite.Interop.dll">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
